--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
 				<div class="container">
 					<div class="section-title">
 						<h2>About</h2>
-						<p></p>
+						<p>
+							Currently, I am working on porfolio projects and AWS solution architect associate certification to learn about different tech stacks and
+							Devops. Feel free to contact me!
+						</p>
 					</div>
 
 					<div class="row">
@@ -105,25 +108,26 @@
 						<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 							<h3>Software Developer</h3>
 							<p>
-								Currently, I am working on porfolio projects and AWS solution architect associate certification to learn about different tech stacks
-								and Devops.
+								When a friend recently asked me what I will do til I retired, I realized I will be very regretful if I don't give software development
+								a serious try. Because I have always loved computers, games, toys and puzzles since young, I get in the zone easily when I solve
+								problems. However, I knew the world wasn't just about how computers work and I was lacking in business knowledge and soft skills. So I
+								went to business school to learn how companies make money. Guess what, softwares are everywhere.
 							</p>
 							<div class="row">
 								<div class="col-lg-6">
 									<ul>
 										<li><i class="bi bi-chevron-right"></i> <span>yunzeng18@gmail.com</span></li>
 										<li><i class="bi bi-chevron-right"></i> <span>1 778 710 7221</span></li>
-										<li><i class="bi bi-chevron-right"></i> <span>Surrey, BC, Canada</span></li>
 									</ul>
 								</div>
 								<div class="col-lg-6">
 									<ul>
 										<li><i class="bi bi-chevron-right"></i> <span>yun-zeng.net</span></li>
-										<li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+										<li><i class="bi bi-chevron-right"></i> <span>Surrey, BC, Canada</span></li>
 									</ul>
 								</div>
 							</div>
-							<p>Feel Free to contact me!</p>
+							<p></p>
 						</div>
 					</div>
 				</div>
@@ -247,68 +251,61 @@
 						<h2>Resume</h2>
 						<p></p>
 					</div>
-
-					<div class="row">
-						<div class="col-lg-6" data-aos="fade-up">
-							<h3 class="resume-title">Sumary</h3>
-							<div class="resume-item pb-0">
-								<h4>Yun Zeng</h4>
-								<p>
-									<em
-										>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print
-										marketing material from initial concept to final, polished deliverable.</em
-									>
-								</p>
-								<ul>
-									<li>Portland par 127,Orlando, FL</li>
-									<li>(123) 456-7891</li>
-									<li>alice.barkley@example.com</li>
-								</ul>
-							</div>
-
-							<h3 class="resume-title">Education</h3>
-							<div class="resume-item">
-								<h4>Master of Fine Arts &amp; Graphic Design</h4>
-								<h5>2015 - 2016</h5>
-								<p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-								<p>
-									Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti
-									nerada porti sand markend
-								</p>
-							</div>
-							<div class="resume-item">
-								<h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-								<h5>2010 - 2014</h5>
-								<p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-								<p>
-									Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates
-									asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila
-								</p>
-							</div>
+					<div class="col-lg-12" data-aos="fade-up">
+						<h3 class="resume-title">High Lights</h3>
+						<div class="resume-item pb-0">
+							<h4>Yun Zeng</h4>
+							<p>
+								<em>Aspiring software engineer </em>
+							</p>
+							<ul>
+								<li>React</li>
+								<li>Express.js</li>
+								<li>MySql</li>
+								<li>Learning Java frame work</li>
+							</ul>
 						</div>
-						<div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-							<h3 class="resume-title">Professional Experience</h3>
-							<div class="resume-item">
-								<h4>Senior graphic design specialist</h4>
-								<h5>2019 - Present</h5>
-								<p><em>Experion, New York, NY </em></p>
-								<ul>
-									<li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-									<li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project.</li>
-									<li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-									<li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-								</ul>
+						<div class="row">
+							<div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
+								<h3 class="resume-title">Professional Experience</h3>
+								<div class="resume-item">
+									<h4>Senior graphic design specialist</h4>
+									<h5>2019 - Present</h5>
+									<p><em>Experion, New York, NY </em></p>
+									<ul>
+										<li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+										<li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project.</li>
+										<li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+										<li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+									</ul>
+								</div>
+								<div class="resume-item">
+									<h4>Graphic design specialist</h4>
+									<h5>2017 - 2018</h5>
+									<p><em>Stepping Stone Advertising, New York, NY</em></p>
+									<ul>
+										<li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+										<li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+										<li>Recommended and consulted with clients on the most appropriate graphic design</li>
+										<li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+									</ul>
+								</div>
 							</div>
-							<div class="resume-item">
-								<h4>Graphic design specialist</h4>
-								<h5>2017 - 2018</h5>
-								<p><em>Stepping Stone Advertising, New York, NY</em></p>
-								<ul>
-									<li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-									<li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-									<li>Recommended and consulted with clients on the most appropriate graphic design</li>
-									<li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-								</ul>
+							<div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
+								<h3 class="resume-title">Education</h3>
+								<div class="resume-item">
+									<h4>Accounting Diploma</h4>
+
+									<p><em>British Columbia Institute of Technology </em></p>
+									<h5>2016 - 2017</h5>
+									<p>Fullfil requirements for enrollment in Chartered Professional Accountant Professional Edcation Program</p>
+								</div>
+								<div class="resume-item">
+									<h4>Bachelor of Business Administration</h4>
+									<h5>2009 - 2016</h5>
+									<p><em>Simon Fraser University</em></p>
+									<p>Joint major with computer science with focus on operation management and management information system</p>
+								</div>
 							</div>
 						</div>
 					</div>
