--- a/index.html
+++ b/index.html
@@ -269,33 +269,39 @@
 							<div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
 								<h3 class="resume-title">Professional Experience</h3>
 								<div class="resume-item">
-									<h4>Senior graphic design specialist</h4>
-									<h5>2019 - Present</h5>
-									<p><em>Experion, New York, NY </em></p>
+									<h4>Accountant</h4>
+									<h5>Dusangh & Co. CPAs</h5>
+									<p><em>Jan 2019 - March 2019, Surrey</em></p>
 									<ul>
-										<li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-										<li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project.</li>
-										<li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-										<li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+										<li>Prepared year end working papers for financial reporting by going through client files</li>
+										<li>Drafted year end financial statements and corporate income tax returns for small/medium businesses</li>
+										<li>Main software utilized: CaseWare, Excel, ProFile</li>
 									</ul>
 								</div>
 								<div class="resume-item">
-									<h4>Graphic design specialist</h4>
-									<h5>2017 - 2018</h5>
-									<p><em>Stepping Stone Advertising, New York, NY</em></p>
+									<h4>Bookkeeper</h4>
+									<h5>Accountech Business Services Inc.</h5>
+									<p><em>Jan 2018 - May 2018, Coquitlam</em></p>
 									<ul>
-										<li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-										<li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-										<li>Recommended and consulted with clients on the most appropriate graphic design</li>
-										<li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+										<li>Full cycle bookkeeping services for small/medium companies during tax season</li>
+										<li>Reconciled bank statement against sales and expense receipts</li>
+										<li>Responded to client inquiries in a timely and professional manner</li>
+										<li>Main software utilized: QuickBooks Desktop, Excel</li>
 									</ul>
 								</div>
 							</div>
 							<div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
 								<h3 class="resume-title">Education</h3>
 								<div class="resume-item">
+									<h4>Amazone Web Service Certificates</h4>
+									<p><em>Self Study</em></p>
+									<h5>March 2021 - Present</h5>
+									<p>Certified Solution Architect</p>
+									<h5>Jan - March 2021</h5>
+									<p>Certified Cloud Practitioner</p>
+								</div>
+								<div class="resume-item">
 									<h4>Accounting Diploma</h4>
-
 									<p><em>British Columbia Institute of Technology </em></p>
 									<h5>2016 - 2017</h5>
 									<p>Fullfil requirements for enrollment in Chartered Professional Accountant Professional Edcation Program</p>
@@ -318,10 +324,7 @@
 				<div class="container">
 					<div class="section-title">
 						<h2>Portfolio</h2>
-						<p>
-							Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos
-							quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.
-						</p>
+						<p>In Porgress...</p>
 					</div>
 
 					<div class="row" data-aos="fade-up">
