--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 					<div class="section-title">
 						<h2>About</h2>
 						<p>
-							Currently, I am working on porfolio projects and AWS solution architect associate certification to learn about different tech stacks and
-							Devops. Feel free to contact me!
+							Currently, I am working on porfolio projects and AWS solution architect associate certification to learn about different system designs
+							and Devops. Feel free to contact me!
 						</p>
 					</div>
 
@@ -259,15 +259,19 @@
 								<em>Aspiring software engineer </em>
 							</p>
 							<ul>
-								<li>React</li>
-								<li>Express.js</li>
-								<li>MySql</li>
-								<li>Learning Java frame work</li>
+								<li>Recent graduate from 3 months of intense collaborative agile sprint programming bootcamp at BrainStation</li>
+								<li>Frameworks: React, Express.js</li>
+								<li>Programming Language: JavaScript, Html, scss/css, sql</li>
+								<li>Currently working on portfolio and personal website to learn about CI/CD and deployment</li>
+								<li>Personal website hosted on AWS S3: yun-zeng.net</li>
+								<li>Tools: VScode, Git, Chrome dev</li>
+								<li>SFU business administration and computer science joint major graduate</li>
+								<li>Fluent in English, Cantonese and Mandarin</li>
 							</ul>
 						</div>
 						<div class="row">
 							<div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
-								<h3 class="resume-title">Professional Experience</h3>
+								<h3 class="resume-title">Work Experience</h3>
 								<div class="resume-item">
 									<h4>Accountant</h4>
 									<h5>Dusangh & Co. CPAs</h5>
@@ -289,6 +293,47 @@
 										<li>Main software utilized: QuickBooks Desktop, Excel</li>
 									</ul>
 								</div>
+								<div class="resume-item">
+									<h4>Inventory Assistant</h4>
+									<h5>T & T Supermarket</h5>
+									<p><em>Jun 2015 - Aug 2018, Surrey</em></p>
+									<ul>
+										<li>Improved teamwork skills through collaboration with others</li>
+										<li>Transported and organized 8 – 15 pallets of vegetable and fruit inventory daily</li>
+										<li>Paid attention to details by monitoring product quality and item counts</li>
+										<li>Supported manager on weekly and monthly inventory purchasing decision</li>
+									</ul>
+								</div>
+								<div class="resume-item">
+									<h4>Cashier</h4>
+									<h5>McDonald's</h5>
+									<p><em>Aug 2009 - Feb 2010, New Westminster</em></p>
+									<ul>
+										<li>Provided satisfying customer service</li>
+										<li>Handled ordering and payment process</li>
+										<li>Cleaning duties</li>
+										<li>Store closing duties</li>
+									</ul>
+								</div>
+								<div class="resume-item">
+									<h4>Sales and Service</h4>
+									<h5>Canadian Property Stars</h5>
+									<p><em>Mar 2011 - Sep 2011, Burnaby</em></p>
+									<ul>
+										<li>Solicited detached houses averaging 200 per day</li>
+										<li>Provided lawn service for each successful sale</li>
+										<li>Sold an average of 5 services per day</li>
+									</ul>
+								</div>
+								<div class="resume-item">
+									<h4>Merchandiser</h4>
+									<h5>Shoppers Drug Mart</h5>
+									<p><em>Dec 2008 - May 2009, New Westminster</em></p>
+									<ul>
+										<li>Addressed customers questions about products and other issues</li>
+										<li>Restocked merchandise on shelves</li>
+									</ul>
+								</div>
 							</div>
 							<div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
 								<h3 class="resume-title">Education</h3>
@@ -296,9 +341,15 @@
 									<h4>Amazone Web Service Certificates</h4>
 									<p><em>Self Study</em></p>
 									<h5>March 2021 - Present</h5>
-									<p>Certified Solution Architect</p>
+									<p>Certified Solution Architect in progress</p>
 									<h5>Jan - March 2021</h5>
 									<p>Certified Cloud Practitioner</p>
+								</div>
+								<div class="resume-item">
+									<h4>Web Development Diploma</h4>
+									<p><em>BrainStation</em></p>
+									<h5>Sep 2020 - Jan 2021</h5>
+									<p>Coding bootcamp to refresh my coding skills</p>
 								</div>
 								<div class="resume-item">
 									<h4>Accounting Diploma</h4>
@@ -308,8 +359,8 @@
 								</div>
 								<div class="resume-item">
 									<h4>Bachelor of Business Administration</h4>
-									<h5>2009 - 2016</h5>
 									<p><em>Simon Fraser University</em></p>
+									<h5>2009 - 2016</h5>
 									<p>Joint major with computer science with focus on operation management and management information system</p>
 								</div>
 							</div>
@@ -324,7 +375,7 @@
 				<div class="container">
 					<div class="section-title">
 						<h2>Portfolio</h2>
-						<p>In Porgress...</p>
+						<p>In Porgress... Below are just code from bootstrap</p>
 					</div>
 
 					<div class="row" data-aos="fade-up">
