--- a/index.html
+++ b/index.html
@@ -260,12 +260,12 @@
 							</p>
 							<ul>
 								<li>Recent graduate from 3 months of intense collaborative agile sprint programming bootcamp at BrainStation</li>
-								<li>Frameworks: React, Express.js</li>
-								<li>Programming Language: JavaScript, Html, scss/css, sql</li>
-								<li>Currently working on portfolio and personal website to learn about CI/CD and deployment</li>
-								<li>Personal website hosted on AWS S3: yun-zeng.net</li>
-								<li>Tools: VScode, Git, Chrome dev</li>
+								<li>
+									Introductory level with these frameworks: React, Redux, SCSS, Material UI, Express.js, Socket.io, Sequelize, MySql, PostgreSql,
+								</li>
+								<li>Tools: Git, VScode, Chrome dev, Slack</li>
 								<li>SFU business administration and computer science joint major graduate</li>
+								<li>Personal website hosted on AWS: yun-zeng.net</li>
 								<li>Fluent in English, Cantonese and Mandarin</li>
 							</ul>
 						</div>
@@ -375,7 +375,7 @@
 				<div class="container">
 					<div class="section-title">
 						<h2>Portfolio</h2>
-						<p>In Porgress... Below are just code from bootstrap</p>
+						<p>Working on deploying them to AWS... Below are just code from bootstrap</p>
 					</div>
 
 					<div class="row" data-aos="fade-up">
