--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 						<p>Working on deploying them to AWS... Below are just code from bootstrap</p>
 					</div>
 
-					<div class="row" data-aos="fade-up">
+					<!-- <div class="row" data-aos="fade-up">
 						<div class="col-lg-12 d-flex justify-content-center">
 							<ul id="portfolio-flters">
 								<li data-filter="*" class="filter-active">All</li>
@@ -387,7 +387,7 @@
 								<li data-filter=".filter-web">Web</li>
 							</ul>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 						<div class="col-lg-4 col-md-6 portfolio-item filter-app">
@@ -401,7 +401,7 @@
 								</div>
 							</div>
 						</div>
-
+						<!-- 
 						<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 							<div class="portfolio-wrap">
 								<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="" />
@@ -484,7 +484,7 @@
 									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
-						</div>
+						</div> -->
 
 						<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 							<div class="portfolio-wrap">
