--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 				<div class="container">
 					<div class="section-title">
 						<h2>Portfolio</h2>
-						<p>Working on deploying them to AWS... Below are just code from bootstrap</p>
+						<p>Working on deploying backend to AWS so they are live...</p>
 					</div>
 
 					<!-- <div class="row" data-aos="fade-up">
@@ -390,30 +390,47 @@
 					</div> -->
 
 					<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-						<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="col-lg-12 portfolio-item filter-app">
+							<h4>1 to 1 Real-time chat App</h4>
 							<div class="portfolio-wrap">
-								<img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="" />
+								<img src="assets/img/portfolio/1to1ChatApp-2.jpg" class="img-fluid" alt="" />
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"
+									<a href="assets/img/portfolio/1to1ChatApp-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="1 to 1 Chat App"
 										><i class="bx bx-plus"></i
 									></a>
-									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
+							<ul>
+								<li>Week long assessment project at Hatways</li>
+								<li>https://github.com/YunZeng18/Hatchways</li>
+								<li>Client side: React, Material-UI, Redux.</li>
+								<li>Web Server: Express.js, Socket.io, cookies, sessions, Sequelize</li>
+								<li>Database: PostgreSQL</li>
+								<li>Became familiar with the code base in less than 3 days, pushed bug fixes and functionalities</li>
+							</ul>
 						</div>
-						<!-- 
-						<div class="col-lg-4 col-md-6 portfolio-item filter-web">
+
+						<div class="col-lg-12 portfolio-item filter-web">
+							<h4>Simple Forum</h4>
 							<div class="portfolio-wrap">
 								<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="" />
 								<div class="portfolio-links">
 									<a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"
 										><i class="bx bx-plus"></i
 									></a>
-									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
 								</div>
 							</div>
+							<ul>
+								<li>Final capstone project at BrainStation boot-camp</li>
+								<li>https://github.com/YunZeng18/Yun-Zeng-NotMyFinalForum</li>
+								<li>Single page CRUD application</li>
+								<li>Tech Stack: SCSS/CSS, React, Express.js, MySql</li>
+								<li>Designed and developed everything by using what was in the course</li>
+							</ul>
 						</div>
-
+						<!-- 
 						<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 							<div class="portfolio-wrap">
 								<img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="" />
@@ -486,7 +503,7 @@
 							</div>
 						</div> -->
 
-						<div class="col-lg-4 col-md-6 portfolio-item filter-web">
+						<!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
 							<div class="portfolio-wrap">
 								<img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="" />
 								<div class="portfolio-links">
@@ -496,7 +513,7 @@
 									<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</section>
