--- a/index.html
+++ b/index.html
@@ -414,9 +414,13 @@
 						<div class="col-lg-12 portfolio-item filter-web">
 							<h4>Simple Forum</h4>
 							<div class="portfolio-wrap">
-								<img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="" />
+								<img src="assets/img/portfolio/notmyfinalforum-1.jpg" class="img-fluid" alt="" />
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"
+									<a
+										href="assets/img/portfolio/notmyfinalforum-1.jpg"
+										data-gallery="portfolioGallery"
+										class="portfolio-lightbox"
+										title="NotMyFinalForum"
 										><i class="bx bx-plus"></i
 									></a>
 									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
