--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 					<div class="section-title">
 						<h2>About</h2>
 						<p>
-							Currently, I am working on porfolio projects and AWS solution architect associate certification to learn about different system designs
-							and Devops. Feel free to contact me!
+							Currently, I am working on porfolio projects and the AWS solution architect associate certification to learn about different system
+							designs and DevOps. Feel free to contact me!
 						</p>
 					</div>
 
@@ -108,10 +108,10 @@
 						<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 							<h3>Software Developer</h3>
 							<p>
-								When a friend recently asked me what I will do til I retired, I realized I will be very regretful if I don't give software development
-								a serious try. Because I have always loved computers, games, toys and puzzles since young, I get in the zone easily when I solve
+								A friend recently asked me what I will do until I retired, I realized I will be very regretful if I don't give software development a
+								serious try. Because I have always loved computers, games, toys and puzzles since young, I get in the zone easily when I solve
 								problems. However, I knew the world wasn't just about how computers work and I was lacking in business knowledge and soft skills. So I
-								went to business school to learn how companies make money. Guess what, softwares are everywhere.
+								went to business school to learn how companies make money. Guess what, software is everywhere.
 							</p>
 							<div class="row">
 								<div class="col-lg-6">
@@ -375,7 +375,7 @@
 				<div class="container">
 					<div class="section-title">
 						<h2>Portfolio</h2>
-						<p>Working on deploying backend to AWS so they are live...</p>
+						<p>Working on deploying backend to AWS so they are online...</p>
 					</div>
 
 					<!-- <div class="row" data-aos="fade-up">
