--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<h3>Software Developer</h3>
 							<p>
 								A friend recently asked me what I will do until I retired, I realized I will be very regretful if I don't give software development a
-								serious try. Because I have always loved computers, games, toys and puzzles since young, I get in the zone easily when I solve
+								serious try. Because I have always loved computers, games, toys and puzzles since young, I am in the zone easily when I solve
 								problems. However, I knew the world wasn't just about how computers work and I was lacking in business knowledge and soft skills. So I
 								went to business school to learn how companies make money. Guess what, software is everywhere.
 							</p>
@@ -402,7 +402,7 @@
 								</div>
 							</div>
 							<ul>
-								<li>Week long assessment project at Hatways</li>
+								<li>Week long assessment project at Hatchways</li>
 								<li>https://github.com/YunZeng18/Hatchways</li>
 								<li>Client side: React, Material-UI, Redux.</li>
 								<li>Web Server: Express.js, Socket.io, cookies, sessions, Sequelize</li>
