--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
 									<ul>
 										<li><i class="bi bi-chevron-right"></i> <span>yunzeng18@gmail.com</span></li>
 										<li><i class="bi bi-chevron-right"></i> <span>1 778 710 7221</span></li>
+										<li>
+											<i class="bi bi-chevron-right"></i> <span><a href="assets/YunZeng_resume(Web Dev).pdf" target="_blank">Resume in PDF</a></span>
+										</li>
 									</ul>
 								</div>
 								<div class="col-lg-6">
