update content and resume

--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@
 							<ul>
 								<li>Recent graduate from 3 months of intense collaborative agile sprint programming bootcamp at BrainStation</li>
 								<li>
-									Introductory level with these frameworks: React, Redux, SCSS, Material UI, Express.js, Socket.io, Sequelize, MySql, PostgreSql,
+									Introductory level with these frameworks: React, Redux, SCSS, Material UI, Express.js, Socket.io, bookshelf.js, MySql, Sequelize,
+									PostgreSql,
 								</li>
 								<li>Tools: Git, VScode, Chrome dev, Slack</li>
 								<li>SFU business administration and computer science joint major graduate</li>
