update deployment link for forum

--- a/index.html
+++ b/index.html
@@ -432,7 +432,8 @@
 							</div>
 							<ul>
 								<li>Final capstone project at BrainStation boot-camp</li>
-								<li>https://github.com/YunZeng18/Yun-Zeng-NotMyFinalForum</li>
+								<li>deployed at: <a href="https://notmyfinalforum.herokuapp.com">https://notmyfinalforum.herokuapp.com/</a></li>
+								<li>source code on: https://github.com/YunZeng18/Yun-Zeng-NotMyFinalForum</li>
 								<li>Single page CRUD application</li>
 								<li>Tech Stack: SCSS/CSS, React, Express.js, MySql</li>
 								<li>Designed and developed everything by using what was in the course</li>
