--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
 			rel="stylesheet"
 		/>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
 
 		<!-- Vendor CSS Files -->
 		<link href="assets/vendor/aos/aos.css" rel="stylesheet" />
@@ -79,7 +80,7 @@
 			</div>
 		</header>
 		<!-- End Header -->
-
+		<canvas></canvas>
 		<!-- ======= Hero Section ======= -->
 		<section id="hero" class="d-flex flex-column justify-content-center align-items-center">
 			<div class="hero-container" data-aos="fade-in">
@@ -781,5 +782,7 @@
 
 		<!-- Template Main JS File -->
 		<script src="assets/js/main.js"></script>
+
+		<script src="assets/js/sketch.js"></script>
 	</body>
 </html>
