--- a/index.html
+++ b/index.html
@@ -433,7 +433,10 @@
 							</div>
 							<ul>
 								<li>Final capstone project at BrainStation boot-camp</li>
-								<li>deployed at: <a href="https://notmyfinalforum.herokuapp.com">https://notmyfinalforum.herokuapp.com/</a></li>
+								<li>
+									deployed at: <a href="https://notmyfinalforum.herokuapp.com">https://notmyfinalforum.herokuapp.com/</a> it takes about 10 seconds to
+									load.
+								</li>
 								<li>source code on: https://github.com/YunZeng18/Yun-Zeng-NotMyFinalForum</li>
 								<li>Single page CRUD application</li>
 								<li>Tech Stack: SCSS/CSS, React, Express.js, MySql</li>
