--- a/index.html
+++ b/index.html
@@ -434,13 +434,14 @@
 							<ul>
 								<li>Final capstone project at BrainStation boot-camp</li>
 								<li>
-									deployed at: <a href="https://notmyfinalforum.herokuapp.com">https://notmyfinalforum.herokuapp.com/</a> it takes about 10 seconds to
-									load.
+									Front end deployed at: <a href="https://notmyfinalforum.herokuapp.com">https://notmyfinalforum.herokuapp.com/</a> it takes about 10
+									seconds to load.
 								</li>
-								<li>source code on: https://github.com/YunZeng18/Yun-Zeng-NotMyFinalForum</li>
+								<li>Source code on: https://github.com/YunZeng18/Yun-Zeng-NotMyFinalForum</li>
+								<li>JSON Web Server: <a href="https://notmyfinalforum-server.herokuapp.com/">https://notmyfinalforum-server.herokuapp.com/</a></li>
 								<li>Single page CRUD application</li>
-								<li>Tech Stack: SCSS/CSS, React, Express.js, MySql</li>
-								<li>Designed and developed everything by using what was in the course</li>
+								<li>Tech Stack: HTML, SCSS/CSS, React, Redux, Express.js, MySql</li>
+								<li>Designed and developed everything from scratch by using what was in the course</li>
 							</ul>
 						</div>
 						<!-- 
