switch portfolio projects order

--- a/index.html
+++ b/index.html
@@ -395,27 +395,6 @@
 					</div> -->
 
 					<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-						<div class="col-lg-12 portfolio-item filter-app">
-							<h4>1 to 1 Real-time chat App</h4>
-							<div class="portfolio-wrap">
-								<img src="assets/img/portfolio/1to1ChatApp-2.jpg" class="img-fluid" alt="" />
-								<div class="portfolio-links">
-									<a href="assets/img/portfolio/1to1ChatApp-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="1 to 1 Chat App"
-										><i class="bx bx-plus"></i
-									></a>
-									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
-								</div>
-							</div>
-							<ul>
-								<li>Week long assessment project at Hatchways</li>
-								<li>https://github.com/YunZeng18/Hatchways</li>
-								<li>Client side: React, Material-UI, Redux.</li>
-								<li>Web Server: Express.js, Socket.io, cookies, sessions, Sequelize</li>
-								<li>Database: PostgreSQL</li>
-								<li>Became familiar with the code base in less than 3 days, pushed bug fixes and functionalities</li>
-							</ul>
-						</div>
-
 						<div class="col-lg-12 portfolio-item filter-web">
 							<h4>Simple Forum</h4>
 							<div class="portfolio-wrap">
@@ -444,6 +423,27 @@
 								<li>Designed and developed everything from scratch by using what was in the course</li>
 							</ul>
 						</div>
+						<div class="col-lg-12 portfolio-item filter-app">
+							<h4>1 to 1 Real-time chat App</h4>
+							<div class="portfolio-wrap">
+								<img src="assets/img/portfolio/1to1ChatApp-2.jpg" class="img-fluid" alt="" />
+								<div class="portfolio-links">
+									<a href="assets/img/portfolio/1to1ChatApp-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="1 to 1 Chat App"
+										><i class="bx bx-plus"></i
+									></a>
+									<!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+								</div>
+							</div>
+							<ul>
+								<li>Week long assessment project at Hatchways</li>
+								<li>https://github.com/YunZeng18/Hatchways</li>
+								<li>Client side: React, Material-UI, Redux.</li>
+								<li>Web Server: Express.js, Socket.io, cookies, sessions, Sequelize</li>
+								<li>Database: PostgreSQL</li>
+								<li>Became familiar with the code base in less than 3 days, pushed bug fixes and functionalities</li>
+							</ul>
+						</div>
+
 						<!-- 
 						<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 							<div class="portfolio-wrap">
@@ -705,8 +705,8 @@
 
 								<div class="phone">
 									<i class="bi bi-phone"></i>
-									<h4>Call:</h4>
-									<p>+1 778 710 7221</p>
+									<h4>Mobile:</h4>
+									<p>1 778 710 7221</p>
 								</div>
 
 								<iframe
