--- a/index.html
+++ b/index.html
@@ -416,8 +416,14 @@
 									Front end deployed at: <a href="https://notmyfinalforum.herokuapp.com">https://notmyfinalforum.herokuapp.com/</a> it takes about 10
 									seconds to load.
 								</li>
-								<li>Source code on: https://github.com/YunZeng18/Yun-Zeng-NotMyFinalForum</li>
+								<li>
+									Front end source code on:
+									<a href="https://github.com/YunZeng18/Simpleforum-client"> https://github.com/YunZeng18/Simpleforum-client</a>
+								</li>
 								<li>JSON Web Server: <a href="https://notmyfinalforum-server.herokuapp.com/">https://notmyfinalforum-server.herokuapp.com/</a></li>
+								<li>
+									JSON Web Server source code: <a href="https://github.com/YunZeng18/Simple-forum">https://github.com/YunZeng18/Simple-forum</a>
+								</li>
 								<li>Single page CRUD application</li>
 								<li>Tech Stack: HTML, SCSS/CSS, React, Redux, Express.js, MySql</li>
 								<li>Designed and developed everything from scratch by using what was in the course</li>
