update project description

--- a/index.html
+++ b/index.html
@@ -380,7 +380,6 @@
 				<div class="container">
 					<div class="section-title">
 						<h2>Portfolio</h2>
-						<p>Working on deploying backend to AWS so they are online...</p>
 					</div>
 
 					<!-- <div class="row" data-aos="fade-up">
@@ -441,6 +440,7 @@
 								</div>
 							</div>
 							<ul>
+								<li>Working on deploying backend to AWS so this is live online...</li>
 								<li>Week long assessment project at Hatchways</li>
 								<li>https://github.com/YunZeng18/Hatchways</li>
 								<li>Client side: React, Material-UI, Redux.</li>
