--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 									Introductory level with these frameworks: React, Redux, SCSS, Material UI, Express.js, Socket.io, bookshelf.js, MySql, Sequelize,
 									PostgreSql,
 								</li>
-								<li>Tools: Git, VScode, Chrome dev, Slack</li>
+								<li>Tools: Git, VScode, Chrome dev, Postman, Slack</li>
 								<li>SFU business administration and computer science joint major graduate</li>
 								<li>Personal website hosted on AWS: yun-zeng.net</li>
 								<li>Fluent in English, Cantonese and Mandarin</li>
