--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
 										<li><i class="bi bi-chevron-right"></i> <span>yunzeng18@gmail.com</span></li>
 										<li><i class="bi bi-chevron-right"></i> <span>1 778 710 7221</span></li>
 										<li>
-											<i class="bi bi-chevron-right"></i> <span><a href="assets/YunZeng_resume(Web Dev).pdf" target="_blank">Resume in PDF</a></span>
+											<i class="bi bi-chevron-right"></i>
+											<span><a href="assets/YunZeng_resume(Developer).pdf" target="_blank">Resume in PDF</a></span>
 										</li>
 									</ul>
 								</div>
