--- a/index.html
+++ b/index.html
@@ -265,10 +265,7 @@
 							</p>
 							<ul>
 								<li>Recent graduate from 3 months of intense collaborative agile sprint programming bootcamp at BrainStation</li>
-								<li>
-									Introductory level with these frameworks: React, Redux, SCSS, Material UI, Express.js, Socket.io, bookshelf.js, MySql, Sequelize,
-									PostgreSql,
-								</li>
+								<li>Introductory level with these frameworks: React, Redux, SCSS, Material UI, Express.js, Socket.io, Bookshelf.js, Sequelize,</li>
 								<li>Tools: Git, VScode, Chrome dev, Postman, Slack</li>
 								<li>SFU business administration and computer science joint major graduate</li>
 								<li>Personal website hosted on AWS: yun-zeng.net</li>
