--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
 		<title>Yun Zeng</title>
-		<meta content="" name="description" />
-		<meta content="" name="keywords" />
+		<meta content="Yun Zeng's personal website" name="description" />
+		<meta content="Yun Zeng linkedin portfolio resume" name="keywords" />
 
 		<!-- Favicons -->
 		<!-- <link href="assets/img/favicon.png" rel="icon" />
@@ -104,7 +104,7 @@
 
 					<div class="row">
 						<div class="col-lg-4" data-aos="fade-right">
-							<img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+							<img src="assets/img/profile-img.jpg" class="img-fluid" alt="Yun Zeng" />
 						</div>
 						<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 							<h3>Software Developer</h3>
