--- a/index.html
+++ b/index.html
@@ -440,6 +440,7 @@
 							<ul>
 								<li>Working on deploying backend to AWS so this is live online...</li>
 								<li>Week long assessment project at Hatchways</li>
+								<li>Main challenge: implementation of read status to track messages in real time</li>
 								<li>https://github.com/YunZeng18/Hatchways</li>
 								<li>Client side: React, Material-UI, Redux.</li>
 								<li>Web Server: Express.js, Socket.io, cookies, sessions, Sequelize</li>
