--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<section id="hero" class="d-flex flex-column justify-content-center align-items-center">
 			<div class="hero-container" data-aos="fade-in">
 				<h1>Yun Zeng</h1>
-				<p><span class="typed" data-typed-items="Developer..., Accountant..., Freelancer...,"></span></p>
+				<p><span class="typed" data-typed-items="Software Developer..., Accountant..., Freelancer...,"></span></p>
 			</div>
 		</section>
 		<!-- End Hero -->
@@ -97,8 +97,8 @@
 					<div class="section-title">
 						<h2>About</h2>
 						<p>
-							Currently, I am working on porfolio projects and the AWS solution architect associate certification to learn about different system
-							designs and DevOps. Feel free to contact me!
+							I am a Backend Software Developer, who can do their own DevOps. I primarily code in Node.js. I have a Bachelor's with a double major in
+							Computer Science and Business Administration from SFU; and a web development diploma from BrainStation.
 						</p>
 					</div>
 
@@ -129,6 +129,11 @@
 									<ul>
 										<li><i class="bi bi-chevron-right"></i> <span>yun-zeng.net</span></li>
 										<li><i class="bi bi-chevron-right"></i> <span>Surrey, BC, Canada</span></li>
+										<li>
+											<i class="bi bi-chevron-right"></i>
+											<a href="https://www.linkedin.com/in/yunzeng18/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+											<a href="https://github.com/YunZeng18" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+										</li>
 									</ul>
 								</div>
 							</div>
@@ -276,6 +281,15 @@
 							<div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
 								<h3 class="resume-title">Work Experience</h3>
 								<div class="resume-item">
+									<h4>Software Developer</h4>
+									<h5>Freelance</h5>
+									<p><em>Jan 2021 - Current, Surrey</em></p>
+									<ul>
+										<li>Develop personal portfolio projects</li>
+										<li>Study Amazon Web Services and Solution Architect Associate Certificate</li>
+									</ul>
+								</div>
+								<div class="resume-item">
 									<h4>Accountant</h4>
 									<h5>Dusangh & Co. CPAs</h5>
 									<p><em>Aug 2018 - Aug 2020, Surrey</em></p>
@@ -341,7 +355,7 @@
 							<div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
 								<h3 class="resume-title">Education</h3>
 								<div class="resume-item">
-									<h4>Amazone Web Service Certificates</h4>
+									<h4>Amazon Web Service Certificates</h4>
 									<p><em>Self Study</em></p>
 									<h5>March 2021 - Present</h5>
 									<p>Certified Solution Architect in progress</p>
@@ -352,13 +366,13 @@
 									<h4>Web Development Diploma</h4>
 									<p><em>BrainStation</em></p>
 									<h5>Sep 2020 - Jan 2021</h5>
-									<p>Coding bootcamp to refresh my coding skills</p>
+									<p>Coding boot camp to refresh my coding skills</p>
 								</div>
 								<div class="resume-item">
 									<h4>Accounting Diploma</h4>
 									<p><em>British Columbia Institute of Technology </em></p>
 									<h5>2016 - 2017</h5>
-									<p>Fullfil requirements for enrollment in Chartered Professional Accountant Professional Edcation Program</p>
+									<p>Fullfil requirements for enrollment in Chartered Professional Accountant Professional Education Program</p>
 								</div>
 								<div class="resume-item">
 									<h4>Bachelor of Business Administration</h4>
@@ -423,7 +437,7 @@
 								</li>
 								<li>Single page CRUD application</li>
 								<li>Tech Stack: HTML, SCSS/CSS, React, Redux, Express.js, MySql</li>
-								<li>Designed and developed everything from scratch by using what was in the course</li>
+								<li>Designed and developed everything from scratch by using what was in the BrainStation boot-camp</li>
 							</ul>
 						</div>
 						<div class="col-lg-12 portfolio-item filter-app">
