--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 										<li><i class="bi bi-chevron-right"></i> <span>1 778 710 7221</span></li>
 										<li>
 											<i class="bi bi-chevron-right"></i>
-											<span><a href="assets/YunZeng_resume(Developer).pdf" target="_blank">Resume in PDF</a></span>
+											<span><a href="assets/Yun Zeng - Resume (Software Developer).pdf" target="_blank">Resume in PDF</a></span>
 										</li>
 									</ul>
 								</div>
