--- a/index.html
+++ b/index.html
@@ -119,20 +119,22 @@
 									<ul>
 										<li><i class="bi bi-chevron-right"></i> <span>yunzeng18@gmail.com</span></li>
 										<li><i class="bi bi-chevron-right"></i> <span>1 778 710 7221</span></li>
-										<li>
-											<i class="bi bi-chevron-right"></i>
-											<span><a href="assets/Yun Zeng - Resume (Software Developer).pdf" target="_blank">Resume in PDF</a></span>
-										</li>
+										<li><i class="bi bi-chevron-right"></i> <span>Surrey, BC, Canada</span></li>
 									</ul>
 								</div>
 								<div class="col-lg-6">
 									<ul>
-										<li><i class="bi bi-chevron-right"></i> <span>yun-zeng.net</span></li>
-										<li><i class="bi bi-chevron-right"></i> <span>Surrey, BC, Canada</span></li>
 										<li>
 											<i class="bi bi-chevron-right"></i>
-											<a href="https://www.linkedin.com/in/yunzeng18/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-											<a href="https://github.com/YunZeng18" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+											<span><a href="assets/Yun Zeng - Resume (Software Developer).pdf" target="_blank">Resume in PDF</a></span>
+										</li>
+										<li>
+											<i class="bi bi-chevron-right"></i>
+											<a href="https://www.linkedin.com/in/yunzeng18/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i>LinkedIn</a>
+										</li>
+										<li>
+											<i class="bi bi-chevron-right"></i>
+											<a href="https://github.com/YunZeng18" target="_blank" class="github"><i class="bx bxl-github"></i>GitHub</a>
 										</li>
 									</ul>
 								</div>
