--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<meta content="Yun Zeng linkedin portfolio resume" name="keywords" />
 
 		<!-- Favicons -->
-		<!-- <link href="assets/img/favicon.png" rel="icon" />
-		<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" /> -->
+		<link href="assets/img/favicon.png" rel="icon" />
+		<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
 		<!-- Google Fonts -->
 		<link
@@ -272,8 +272,9 @@
 							</p>
 							<ul>
 								<li>Recent graduate from 3 months of intense collaborative agile sprint programming bootcamp at BrainStation</li>
-								<li>Introductory level with these frameworks: React, Redux, SCSS, Material UI, Express.js, Socket.io, Bookshelf.js, Sequelize,</li>
-								<li>Tools: Git, VScode, Chrome dev, Postman, Slack</li>
+								<li>Introductory level with these frameworks: React, Redux, Material UI, SCSS, Express.js, Socket.io, Bookshelf.js, Sequelize,</li>
+								<li>Most familiar programming languages: JavaScript, Ruby, SQL</li>
+								<li>Tools: Git, VScode, Chrome dev, Postman, Slack, bash, etc.</li>
 								<li>SFU business administration and computer science joint major graduate</li>
 								<li>Personal website hosted on AWS: yun-zeng.net</li>
 								<li>Fluent in English, Cantonese and Mandarin</li>
