--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 					<div class="section-title">
 						<h2>About</h2>
 						<p>
-							I am a Backend Software Developer, who can do their own DevOps. I primarily code in Node.js. I have a Bachelor's with a double major in
-							Computer Science and Business Administration from SFU; and a web development diploma from BrainStation.
+							test I am a Backend Software Developer, who can do their own DevOps. I primarily code in Node.js. I have a Bachelor's with a double
+							major in Computer Science and Business Administration from SFU; and a web development diploma from BrainStation.
 						</p>
 					</div>
 
