--- a/index.html
+++ b/index.html
@@ -285,8 +285,18 @@
 								<h3 class="resume-title">Work Experience</h3>
 								<div class="resume-item">
 									<h4>Software Developer</h4>
+									<h5>Goopter Holdings Ltd</h5>
+									<p><em>Nov 2021 - Mar 2022, Surrey</em></p>
+									<ul>
+										<li>Develop Python script to automatically expand Goopter’s online marketing presence.</li>
+										<li>Fix bugs and implement features in the clients’ admin and customer facing website. (React, Redux,SCSS)</li>
+										<li>Provide technical support to clients</li>
+									</ul>
+								</div>
+								<div class="resume-item">
+									<h4>Software Developer</h4>
 									<h5>Freelance</h5>
-									<p><em>Jan 2021 - Current, Surrey</em></p>
+									<p><em>Jan - Oct 2021, Surrey</em></p>
 									<ul>
 										<li>Develop personal portfolio projects</li>
 										<li>Study Amazon Web Services and Solution Architect Associate Certificate</li>
