update fispan experience

--- a/index.html
+++ b/index.html
@@ -285,8 +285,18 @@
 								<h3 class="resume-title">Work Experience</h3>
 								<div class="resume-item">
 									<h4>Software Developer</h4>
+									<h5>Java C# Software Developer</h5>
+									<p><em>Jan 2022 - Present, Vancouver</em></p>
+									<ul>
+										<li>ERP and bank payment transactions Integration and consolidation</li>
+										<li>Microsoft Business Dynamics 365, C/AL programming</li>
+										<li>Main tools: VS Code, Bash, Git, Slack, Jira</li>
+									</ul>
+								</div>
+								<div class="resume-item">
+									<h4>Software Developer</h4>
 									<h5>Goopter Holdings Ltd</h5>
-									<p><em>Nov 2021 - Mar 2022, Surrey</em></p>
+									<p><em>Nov 2021 - Dec 2021, Surrey</em></p>
 									<ul>
 										<li>Develop Python script to automatically expand Goopter’s online marketing presence.</li>
 										<li>Fix bugs and implement features in the clients’ admin and customer facing website. (React, Redux,SCSS)</li>
