add link to company

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 <em>Aspiring software engineer </em>
               </p>
               <ul>
-                <li>Currently working at Fispan as a software developer, a financial service company.</li>
+                <li>Currently working at <a href="https://fispan.com/">Fispan</a> as a software developer, a financial service company.</li>
                 <li>Introductory level with these frameworks: React, Redux, Material UI, SCSS, Express.js, Socket.io, Bookshelf.js, Sequelize,</li>
                 <li>Most familiar programming languages: JavaScript, Ruby, SQL</li>
                 <li>Tools: Git, VScode, Chrome dev, Postman, Slack, bash, etc.</li>
