update resume. end of Fispan co-op

--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
               <div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
                 <h3 class="resume-title">Work Experience</h3>
                 <div class="resume-item">
-                  <h4>Java C# Software Developer</h4>
+                  <h4>Software Developer - Co-op</h4>
                   <h5>Fispan</h5>
-                  <p><em>Jan 2022 - Present, Vancouver</em></p>
+                  <p><em>Jan 2022 - Aug 2022, Vancouver</em></p>
                   <ul>
                     <li>ERP and bank payment transactions Integration, automation and consolidation</li>
                     <li>Microsoft Business Dynamics 365, C/AL programming</li>
