--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
           <div class="section-title">
             <h2>About</h2>
             <p>
-              I am a Backend Software Developer, who can do their own DevOps. I primarily code in Node.js. I have a Bachelor's with a double major in
-              Computer Science and Business Administration from SFU; and a web development diploma from BrainStation.
+              I am a fullstack Software Developer, who can do their own DevOps. I primarily code in React and Node.js. I have earned Bachelor's with a
+              double major in Computer Science and Business Administration from SFU; accounting degree from BCIT and a web development diploma from
+              BrainStation.
             </p>
           </div>
 
@@ -272,8 +273,8 @@
               </p>
               <ul>
                 <li>Currently working at <a href="https://fispan.com/">Fispan</a> as a software developer, a financial service company.</li>
-                <li>Introductory level with these frameworks: React, Redux, Material UI, SCSS, Express.js, Socket.io, Bookshelf.js, Sequelize,</li>
-                <li>Most familiar programming languages: JavaScript, Ruby, SQL</li>
+                <li>Medium level with these frameworks: React, Redux, Material UI, SCSS, Express.js, Socket.io, Bookshelf.js, Sequelize,</li>
+                <li>Most familiar programming languages: JavaScript</li>
                 <li>Tools: Git, VScode, Chrome dev, Postman, Slack, bash, etc.</li>
                 <li>SFU business administration and computer science joint major graduate</li>
                 <li>Personal website hosted on AWS: yun-zeng.net</li>
@@ -288,9 +289,10 @@
                   <h5>Fispan</h5>
                   <p><em>Jan 2022 - Aug 2022, Vancouver</em></p>
                   <ul>
-                    <li>ERP and bank payment transactions Integration, automation and consolidation</li>
-                    <li>Microsoft Business Dynamics 365, C/AL programming</li>
-                    <li>Main tools: VS Code, Bash, Git, Slack, Jira</li>
+                    <li>Responsible for improving ERP bank transaction Integration and consolidation</li>
+                    <li>Develop new features for ERP implemented in Microsoft Business Dynamics 365, C/AL programming</li>
+                    <li>Improve user administrative page implemented in React, Redux</li>
+                    <li>Main tools: VS Code, IntelliJ IDEA, Bash, Git, Slack, Jira, Confluence</li>
                   </ul>
                 </div>
                 <div class="resume-item">
@@ -298,9 +300,9 @@
                   <h5>Goopter Holdings Ltd</h5>
                   <p><em>Nov 2021 - Dec 2021, Surrey</em></p>
                   <ul>
-                    <li>Develop Python script to automatically expand Goopter’s online marketing presence.</li>
-                    <li>Fix bugs and implement features in the clients’ admin and customer facing website. (React, Redux,SCSS)</li>
-                    <li>Provide technical support to clients</li>
+                    <li>Developed Python script to automatically expand Goopter's online marketing presence.</li>
+                    <li>Fixed bugs and implement features in the clients' admin and customer facing website. (React, Redux,SCSS)</li>
+                    <li>Provided technical support to clients</li>
                   </ul>
                 </div>
                 <div class="resume-item">
@@ -308,8 +310,8 @@
                   <h5>Freelance</h5>
                   <p><em>Jan - Oct 2021, Surrey</em></p>
                   <ul>
-                    <li>Develop personal portfolio projects</li>
-                    <li>Study Amazon Web Services and Solution Architect Associate Certificate</li>
+                    <li>Developed personal portfolio projects</li>
+                    <li>Studied Amazon Web Services and Solution Architect Associate Certificate</li>
                   </ul>
                 </div>
                 <div class="resume-item">
