--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
               <ul>
                 <li>Currently working at <a href="https://fispan.com/">Fispan</a> as a software developer, a financial service company.</li>
                 <li>Medium level with these frameworks: React, Redux, Material UI, SCSS, Express.js, Socket.io, Bookshelf.js, Sequelize,</li>
-                <li>Most familiar programming languages: JavaScript</li>
+                <li>Most familiar programming languages: JavaScript, Java</li>
                 <li>Tools: Git, VScode, Chrome dev, Postman, Slack, bash, etc.</li>
                 <li>SFU business administration and computer science joint major graduate</li>
                 <li>Personal website hosted on AWS: yun-zeng.net</li>
@@ -289,20 +289,20 @@
                   <h5>Fispan</h5>
                   <p><em>Jan 2022 - Aug 2022, Vancouver</em></p>
                   <ul>
-                    <li>Responsible for improving ERP bank transaction Integration and consolidation</li>
+                    <li>Collaborate across teams to improve clients' repetitive bank payment process</li>
                     <li>Develop new features for ERP implemented in Microsoft Business Dynamics 365, C/AL programming</li>
-                    <li>Improve user administrative page implemented in React, Redux</li>
+                    <li>Streamline client onboard process administrative page that is implemented in JavaScript, React, Redux</li>
                     <li>Main tools: VS Code, IntelliJ IDEA, Bash, Git, Slack, Jira, Confluence</li>
                   </ul>
                 </div>
                 <div class="resume-item">
                   <h4>Software Developer</h4>
                   <h5>Goopter Holdings Ltd</h5>
-                  <p><em>Nov 2021 - Dec 2021, Surrey</em></p>
+                  <p><em>Oct 2021 - Dec 2021, Surrey</em></p>
                   <ul>
                     <li>Developed Python script to automatically expand Goopter's online marketing presence.</li>
-                    <li>Fixed bugs and implement features in the clients' admin and customer facing website. (React, Redux,SCSS)</li>
-                    <li>Provided technical support to clients</li>
+                    <li>Fixed bugs and implement features in the clients' admin and customer facing website. (JavaScript, React, Redux,SCSS)</li>
+                    <li>Provided technical support to clients.</li>
                   </ul>
                 </div>
                 <div class="resume-item">
@@ -319,7 +319,7 @@
                   <h5>Dusangh & Co. CPAs</h5>
                   <p><em>Aug 2018 - Aug 2020, Surrey</em></p>
                   <ul>
-                    <li>Prepared year end working papers for financial reporting by going through client files</li>
+                    <li>Prepared year end working papers for financial reporting by going through client files and paper works</li>
                     <li>Drafted year end financial statements and corporate income tax returns for small/medium businesses</li>
                     <li>Main software utilized: CaseWare, Excel, ProFile</li>
                   </ul>
