--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     <li>Collaborate across teams to improve clients' repetitive bank payment process</li>
                     <li>Develop new features for ERP implemented in Microsoft Business Dynamics 365, C/AL programming</li>
                     <li>Streamline client onboard process administrative page that is implemented in JavaScript, React, Redux</li>
-                    <li>Main tools: VS Code, IntelliJ IDEA, Bash, Git, Slack, Jira, Confluence</li>
+                    <li>Main tools: VS Code, IntelliJ IDEA, Bash, Git, docker, Slack, Jira, Confluence</li>
                   </ul>
                 </div>
                 <div class="resume-item">
@@ -303,6 +303,8 @@
                     <li>Developed Python script to automatically expand Goopter's online marketing presence.</li>
                     <li>Fixed bugs and implement features in the clients' admin and customer facing website. (JavaScript, React, Redux,SCSS)</li>
                     <li>Provided technical support to clients.</li>
+                    \
+                    <li>Main tools: VS Code, Git, bash</li>
                   </ul>
                 </div>
                 <div class="resume-item">
