--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   <ul>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <span><a href="assets/Yun Zeng - Resume (Software Developer).pdf" target="_blank">Resume in PDF</a></span>
+                      <span><a href="assets/Yun Zeng - Resume.pdf" target="_blank">Resume in PDF</a></span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
