--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               <div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
                 <h3 class="resume-title">Work Experience</h3>
                 <div class="resume-item">
-                  <h4>Software Developer - Co-op</h4>
+                  <h4>Software Developer - Fulltime Contract</h4>
                   <h5>Fispan</h5>
                   <p><em>Jan 2022 - Aug 2022, Vancouver</em></p>
                   <ul>
@@ -296,7 +296,7 @@
                   </ul>
                 </div>
                 <div class="resume-item">
-                  <h4>Software Developer</h4>
+                  <h4>Software Developer - Fulltime co-op Contract</h4>
                   <h5>Goopter Holdings Ltd</h5>
                   <p><em>Oct 2021 - Dec 2021, Surrey</em></p>
                   <ul>
