add google analytics tracking

--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TX8CB2ZFBE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-TX8CB2ZFBE');
+  </script>
 
   <body>
     <!-- ======= Mobile nav toggle button ======= -->
